--- a/src/App.css
+++ b/src/App.css
@@ -7,9 +7,75 @@
 	src: url('../public/fonts/Inter-VariableFont_opsz\,wght.ttf');
 }
 
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@font-face {
+  font-family: Inter;
+  src: url('../public/fonts/Inter-VariableFont_opsz,wght.ttf');
+}
+
+@keyframes gradientBackground {
+  0% {
+    background-position: 0% 50%;
+    background-size: 150% 150%;
+  }
+  25% {
+    background-position: 50% 0%;
+    background-size: 200% 200%;
+  }
+  50% {
+    background-position: 100% 50%;
+    background-size: 250% 250%;
+  }
+  75% {
+    background-position: 50% 100%;
+    background-size: 200% 200%;
+  }
+  100% {
+    background-position: 0% 50%;
+    background-size: 150% 150%;
+  }
+}
+
 .App {
+  min-height: 100vh;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: radial-gradient(circle, 
+  #252273 10%, 
+              rgba(76, 14, 118, 0.9) 40%, 
+              rgba(69, 13, 104, 0.9) 60%, 
+              rgba(86, 19, 137, 0.9) 80%);
+  background-size: 200% 200%;
+  animation: gradientBackground 15s ease infinite;
+}
+
+.App-header {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   text-align: center;
 }
+
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+
+.App-header {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
 
 .App-logo {
   height: 40vmin;
@@ -22,16 +88,7 @@
   }
 }
 
-.App-header {
-  background-color: #252273;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+
 
 .App-link {
   color: #61dafb;
